[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flash"
version = "0.1.0"
license = {text = "BSD License"}
description = "A Python package for data science and machine learning utilities"
authors = [{name = "Althaf Muhammad", email = "flashlib0308@gmail.com"}]
maintainers = [
    {name = "Althaf Muhammad", email = "flashlib0308@gmail.com"},
]
requires-python = ">=3.7"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]

urls = { "Source" = "https://github.com/flash-lib/flash" }
keywords = ["data science", "machine learning", "utilities", "python"]